deps: Apache Arrow 18.1.0 -> 19.0.0
Arrow 19 moves arrow-memory-netty from Netty 4.1 to 4.2, and Netty 4.2
switches sun.misc.Unsafe off by default on Java 25+ unless io.netty.noUnsafe
or --sun-misc-unsafe-memory-access is set explicitly. NettyAllocationManager
cannot initialise without it (EmptyByteBuf.memoryAddress throws), so every
allocator in the process failed with an ExceptionInInitializerError
(apache/arrow-java#728).

- Every test task and application start script passes -Dio.netty.noUnsafe=false,
  upstream's fix; unlike --sun-misc-unsafe-memory-access it is accepted by
  JDK 21/22 too.
- Allocators sets the same default before first touching Arrow, unless the
  operator chose either property, so an embedding JVM without the flag still
  starts. Reflection's two stray RootAllocators become children of the shared
  root so Allocators really is the first touch.
- vgirpc-s3 pins netty-bom to 4.2.9: the AWS SDK brought the rest of Netty at
  4.1 alongside Arrow's 4.2 common/buffer.
- Arrow's BOM lifts Jackson to 2.21; declared versions follow, and the client
  driver drops the now-deprecated JsonNode.fields().

Co-Authored-By: Claude Opus 5.5 (1M context) <noreply@anthropic.com>